environments/gloo-gateway/gateway-api/1.17/with-gm-istio/client-app/base/in-mesh-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: in-mesh-client
  namespace: client
  labels:
    app: in-mesh-client
spec:
  ports:
  - port: 5000
    name: http
  selector:
    name: in-mesh-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: in-mesh-client-deployment
  namespace: client
  labels:
    app: in-mesh-client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: in-mesh-client
  template:
    metadata:
      labels:
        name: in-mesh-client
        istio.io/rev: 1-24
    spec:
      serviceAccountName: in-mesh-client
      containers:
      - name: in-mesh-client
        image: ably77/curl-ui:0.7.3
        ports:
        - containerPort: 5000
